<resources>
    <string name="app_name">Banco-adlopa</string>
    <string name="boton_bank">boton_bank</string>
    <string name="card_title">Welcome</string>
    <string name="DNI">DNI</string>
    <string name="inicio">Start Session</string>
    <string name="user">Enter user</string>
    <string name="pass">Enter password</string>
    <string name="required">Required</string>
    <string name="entrar">Login</string>
    <string name="salir">Exit</string>
    <string name="btnGlobal">GLOBAL POSITION</string>
    <string name="btnMoves">MOVEMENTS</string>
    <string name="btnTransfer">TRANSFERS</string>
    <string name="btnChangePass">CHANGE PASSWORD</string>
    <string name="btnPromo">PROMOTIONS</string>
    <string name="btnBox">CASHIER</string>
    <string name="btnExit">EXIT</string>
    <string name="welcome">Welcome to my bank</string>
    <string name="cuentaPropia">Cuenta Propia</string>
    <string name="mensajeCuentaAjena">Escribe el num. cuenta ajena</string>
    <string name="cantidad">Cantidad:</string>
    <string name="send">Enviar</string>
    <string name="cancel">Cancelar</string>
    <string name="lblJusti">Enviar justificante</string>
    <string name="lblElige">Elige tu cuenta;</string>
    <string name="cuentaAjena">Cuenta Ajena</string>
    <string name="title_Global">Posición Global</string>
    <string name="lblCuenta">Cuenta:</string>
    <string name="descImg">imagen Cuenta</string>
    <string name="title_Movs">Movimientos</string>
    <string name="lbl_selCuenta">Selecciona la cuenta:</string>
    <string name="last_movs">Últimos movimientos:</string>
</resources>