<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransferActivity">
    <TextView
        android:id="@+id/titleTransfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Transferencias"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/lblElige"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_min"
        android:layout_marginEnd="@dimen/common_padding_min"
        android:text="@string/lblElige"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTransfer"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Spinner
        android:id="@+id/cuentaOrigen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_padding_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblElige" />

    <RadioGroup
        android:id="@+id/radioBotons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cuentaOrigen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/radioPropia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_min"
            android:text="@string/cuentaPropia"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioAjena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_min"
            android:text="@string/cuentaAjena"
            android:checked="false"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/introCuentaAjena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_padding_horizontal"
        app:layout_constraintTop_toBottomOf="@id/radioBotons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/mensajeCuentaAjena"
        android:textAlignment="center"
        android:visibility="invisible"/>

    <Spinner
        android:id="@+id/cuentaDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_padding_horizontal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioBotons"
        android:visibility="visible"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_min"
        android:layout_marginEnd="@dimen/common_padding_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introCuentaAjena">

        <TextView
            android:id="@+id/lblCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/introCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_min"
            android:textAlignment="center"
            android:paddingHorizontal="100dp"/>

        <Spinner
            android:id="@+id/divisas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkJusti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/lblJusti"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_min"
        android:layout_marginTop="140dp"
        android:paddingLeft="@dimen/common_padding_boton"
        android:paddingRight="@dimen/common_padding_boton"
        android:text="@string/send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCancel"
        app:layout_constraintTop_toBottomOf="@id/checkJusti" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="@dimen/common_padding_min"
        android:paddingLeft="@dimen/common_padding_boton"
        android:paddingRight="@dimen/common_padding_boton"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/checkJusti"
        app:layout_constraintStart_toEndOf="@id/btnSend"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="90dp"
        android:paddingHorizontal="200dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>