<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:navigationIcon="@drawable/ic_menu"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored">

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_boton_bank"
        android:contentDescription="@string/boton_bank"
        app:layout_anchor="@id/bottomAppBar">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <!-- LINEAR LAYOUT PARA EL MENSAJE DE BIENVENIDA -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_min"
            android:layout_marginStart="@dimen/common_padding_min"
            android:layout_marginEnd="@dimen/common_padding_min"
            android:layout_marginBottom="@dimen/common_padding_min"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_min"
                android:layout_marginStart="@dimen/common_padding_min"
                android:layout_marginEnd="@dimen/common_padding_min">

                <ImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="@dimen/card_img_size"
                    android:layout_height="@dimen/card_img_size"
                    android:src="@mipmap/ic_avatar_foreground"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:text="@string/card_title"
                    android:textAlignment="center"
                    app:layout_constraintStart_toEndOf="@id/imgAvatar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <TextView
                    android:id="@+id/dni_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:text="@string/DNI"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintEnd_toEndOf="@id/title"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>